--- a/Regulations.csproj
+++ b/Regulations.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Design" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\bundle\" />
+  </ItemGroup>
+  <ProjectExtensions><VisualStudio><UserProperties package_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 </Project>
