--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "jquery": "^3.5.1",
-    "bootstrap": "^4.5.3"
+    "bootstrap": "^4.5.3",
+    "jquery-validation": "^1.19.2",
+    "jquery-validation-unobtrusive": "^3.2.11"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
